Correção da tela Workout

--- a/app/src/main/res/layout-land/activity_workout.xml
+++ b/app/src/main/res/layout-land/activity_workout.xml
@@ -103,9 +103,16 @@
                         android:text="@string/weight_name"
                         android:textColor="@color/black"
                         android:textSize="20dp" />
+
+                    <TextView
+                        android:background="@drawable/border2"
+                        android:padding="3dip"
+                        android:text="  ✓ "
+                        android:textColor="@color/black"
+                        android:textSize="20dp" />
                 </TableRow>
 
-                <TableRow>
+                <TableRow android:id="@+id/tablerow1">
 
                     <TextView
                         android:id="@+id/exercise1"
@@ -138,9 +145,18 @@
                         android:text="20kg"
                         android:textColor="@color/black"
                         android:textSize="20dp" />
+
+                    <CheckBox
+                        android:id="@+id/checkbox_1"
+                        android:background="@drawable/border2"
+                        android:onClick="onCheckboxClicked"
+                        android:padding="3dp"
+                        android:text=""
+                        android:textColor="@color/black"
+                        android:textSize="20dp"/>
                 </TableRow>
 
-                <TableRow>
+                <TableRow android:id="@+id/tablerow2">
 
                     <TextView
                         android:id="@+id/exercise2"
@@ -173,9 +189,18 @@
                         android:text="20kg"
                         android:textColor="@color/black"
                         android:textSize="20dp" />
+
+                    <CheckBox
+                        android:id="@+id/checkbox_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:background="@drawable/border2"
+                        android:onClick="onCheckboxClicked"
+                        android:textSize="20dp"/>
                 </TableRow>
 
-                <TableRow>
+                <TableRow android:id="@+id/tablerow3">
 
                     <TextView
                         android:id="@+id/exercise3"
@@ -208,9 +233,17 @@
                         android:text="20kg"
                         android:textColor="@color/black"
                         android:textSize="20dp" />
+
+                    <CheckBox
+                        android:id="@+id/checkbox_3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/border2"
+                        android:onClick="onCheckboxClicked"
+                        android:textSize="20dp"/>
                 </TableRow>
 
-                <TableRow>
+                <TableRow android:id="@+id/tablerow4">
 
                     <TextView
                         android:id="@+id/exercise4"
@@ -243,6 +276,15 @@
                         android:text="20kg"
                         android:textColor="@color/black"
                         android:textSize="20dp" />
+
+                    <CheckBox
+                        android:id="@+id/checkbox_4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/border2"
+                        android:onClick="onCheckboxClicked"
+                        android:padding="3dip"
+                        android:textSize="20dp"/>
                 </TableRow>
             </TableLayout>
 
@@ -254,6 +296,19 @@
                 android:layout_below="@+id/table"
                 android:background="@drawable/button_bg_rounded_corners"
                 android:src="@drawable/ic_back_button" />
+
+            <Button
+                android:text="@string/workout_finish"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/finish_workout_btn"
+                android:visibility="invisible"
+                android:background="@drawable/button_bg_rounded_corners"
+                android:textColor="@color/black"
+                android:layout_below="@+id/table"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp" />
+
 
         </RelativeLayout>
     </ScrollView>
