Base de dados populada e correções de tela

--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -69,7 +69,8 @@
         android:layout_below="@+id/spinner"
         android:layout_marginLeft="18dp"
         android:layout_marginTop="137dp"
-        android:text="@string/name_user_info" />
+        android:text="@string/name_user_info"
+        android:textSize="15dp"/>
 
     <TextView
         android:id="@+id/ageTxt"
@@ -78,7 +79,8 @@
         android:layout_alignStart="@+id/nameTxt"
         android:layout_below="@+id/nameTxt"
         android:layout_marginTop="33dp"
-        android:text="@string/age_user_info" />
+        android:text="@string/age_user_info"
+        android:textSize="15dp"/>
 
     <TextView
         android:id="@+id/heightTxt"
@@ -87,7 +89,8 @@
         android:layout_alignStart="@+id/ageTxt"
         android:layout_below="@+id/ageTxt"
         android:layout_marginTop="38dp"
-        android:text="@string/height_user_info" />
+        android:text="@string/height_user_info"
+        android:textSize="15dp"/>
 
     <TextView
         android:id="@+id/weightTxt"
@@ -96,7 +99,8 @@
         android:layout_alignStart="@+id/heightTxt"
         android:layout_below="@+id/heightTxt"
         android:layout_marginTop="27dp"
-        android:text="@string/weight_user_info" />
+        android:text="@string/weight_user_info"
+        android:textSize="15dp"/>
 
     <TextView
         android:id="@+id/imcTxt"
@@ -105,7 +109,8 @@
         android:layout_alignStart="@+id/weightTxt"
         android:layout_below="@+id/weightTxt"
         android:layout_marginTop="28dp"
-        android:text="@string/imc_user_info" />
+        android:text="@string/imc_user_info"
+        android:textSize="15dp"/>
 
     <TextView
         android:id="@+id/nameEdtTxt"
@@ -114,7 +119,8 @@
         android:layout_alignBaseline="@+id/nameTxt"
         android:layout_alignBottom="@+id/nameTxt"
         android:layout_alignStart="@+id/ageEdtTxt"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textSize="15dp"/>
 
     <TextView
         android:id="@+id/ageEdtTxt"
@@ -122,7 +128,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/ageTxt"
         android:layout_centerHorizontal="true"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textSize="15dp"/>
 
     <TextView
         android:id="@+id/heightEdtTxt"
@@ -130,7 +137,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/heightTxt"
         android:layout_centerHorizontal="true"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textSize="15dp"/>
 
     <TextView
         android:id="@+id/weightEdtTxt"
@@ -138,7 +146,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/weightTxt"
         android:layout_centerHorizontal="true"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textSize="15dp"/>
 
     <TextView
         android:id="@+id/imcEdtTxt"
@@ -146,7 +155,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/imcTxt"
         android:layout_centerHorizontal="true"
-        android:padding="5dp" />
+        android:padding="5dp"
+        android:textSize="15dp"/>
 
     <ImageButton
         android:id="@+id/backBtn"
