--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -45,12 +45,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/emailEdtTxt"
-        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginTop="30dp"
         android:background="@drawable/button_bg_rounded_corners"
         android:text="@string/send_button"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:layout_alignEnd="@+id/emailEdtTxt"
+        android:layout_alignStart="@+id/emailEdtTxt" />
 
     <ImageButton
         android:id="@+id/backBtn"
