--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -62,16 +62,6 @@
         -->
 
     <TextView
-        android:id="@+id/nameTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/spinner"
-        android:layout_below="@+id/spinner"
-        android:layout_marginLeft="18dp"
-        android:layout_marginTop="137dp"
-        android:text="@string/name_user_info" />
-
-    <TextView
         android:id="@+id/ageTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -157,6 +147,36 @@
         android:layout_marginBottom="47dp"
         android:background="@drawable/button_bg_rounded_corners"
         android:src="@drawable/ic_back_button" />
+
+    <TextView
+        android:id="@+id/workoutCounterTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/imcTxt"
+        android:layout_below="@+id/imcEdtTxt"
+        android:layout_marginTop="18dp"
+        android:text="@string/workouts_user_info" />
+
+    <TextView
+        android:id="@+id/nameTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/screenTxt"
+        android:layout_marginLeft="18dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="88dp"
+        android:text="@string/name_user_info" />
+
+    <TextView
+        android:id="@+id/workoutsTxtValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/workoutCounterTxt"
+        android:layout_alignBottom="@+id/workoutCounterTxt"
+        android:layout_marginStart="33dp"
+        android:layout_toEndOf="@+id/workoutCounterTxt"
+        android:text="AAA" />
 
 
 </RelativeLayout>
