--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -58,34 +58,14 @@
         android:text=""
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-    <ImageButton
-        android:id="@+id/backBtn"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
-        android:background="@drawable/button_bg_rounded_corners"
-        android:src="@drawable/ic_back_button" />
-
-    <Button
-        android:text="@string/workout_finish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/finish_workout_btn"
-        android:layout_above="@+id/backBtn"
-        android:layout_centerHorizontal="true"
-        android:visibility="invisible"
-        android:background="@drawable/button_bg_rounded_corners"
-        android:textColor="@color/black"/>
-
     <TableLayout
         android:id="@+id/table"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
-        android:layout_marginBottom="43dp"
-        android:layout_above="@+id/finish_workout_btn"
-        android:layout_centerHorizontal="true">
+        android:layout_below="@+id/spinnerWeek"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="80dp">
 
         <TableRow android:background="@color/lightGray">
 
@@ -305,6 +285,28 @@
                 android:textSize="20dp"/>
         </TableRow>
     </TableLayout>
+
+    <ImageButton
+        android:id="@+id/backBtn"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="31dp"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:src="@drawable/ic_back_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/spinnerWeek" />
+
+    <Button
+        android:text="@string/workout_finish"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/finish_workout_btn"
+        android:visibility="invisible"
+        android:background="@drawable/button_bg_rounded_corners"
+        android:textColor="@color/black"
+        android:layout_above="@+id/backBtn"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="59dp" />
 
 
 </RelativeLayout>
