--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -45,39 +46,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
-        <Button
-            android:id="@+id/btnHome"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/AppName"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="95dp"
-            android:background="@drawable/button_bg_rounded_corners"
-            android:text="@string/user_info_button"
-            android:textColor="@color/black" />
-
-        <Button
-            android:id="@+id/btnWorkout"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/btnHome"
-            android:layout_below="@+id/btnHome"
-            android:layout_marginTop="34dp"
-            android:background="@drawable/button_bg_rounded_corners"
-            android:text="@string/workout_button"
-            android:textColor="@color/black" />
-
-        <Button
-            android:id="@+id/btnSubscription"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@+id/btnWorkout"
-            android:layout_below="@+id/btnWorkout"
-            android:layout_marginTop="33dp"
-            android:background="@drawable/button_bg_rounded_corners"
-            android:text="@string/subscription_button"
-            android:textColor="@color/black" />
-
         <ImageButton
             android:id="@+id/settingsButton"
             android:layout_width="50dp"
@@ -89,16 +57,47 @@
             android:background="@drawable/button_bg_rounded_corners"
             android:src="@drawable/ic_settings_icon" />
 
-        <TextView
-            android:id="@+id/AppName"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/btnSubscription"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/button_bg_rounded_corners"
+            android:text="@string/subscription_button"
+            android:textColor="@color/black"
+            android:layout_above="@+id/settingsButton"
+            android:layout_alignStart="@+id/btnWorkout"
+            android:layout_marginBottom="62dp" />
+
+        <Button
+            android:id="@+id/btnWorkout"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_bg_rounded_corners"
+            android:text="@string/workout_button"
+            android:textColor="@color/black"
+            android:layout_above="@+id/btnSubscription"
+            android:layout_alignStart="@+id/btnHome"
+            android:layout_marginBottom="34dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="80dp"
+            app:srcCompat="@drawable/fitkeeper_logo"
+            android:layout_marginTop="29dp"
+            android:id="@+id/imageView2"
             android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+
+        <Button
+            android:id="@+id/btnHome"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_bg_rounded_corners"
+            android:text="@string/user_info_button"
+            android:textColor="@color/black"
+            android:layout_above="@+id/btnWorkout"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="43dp"
-            android:text="@string/app_name"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="50sp" />
+            android:layout_marginBottom="35dp" />
 
         <!--<ImageButton
             android:layout_width="wrap_content"
