--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -62,31 +62,13 @@
         -->
 
     <TextView
-        android:id="@+id/nameTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/spinner"
-        android:layout_below="@+id/spinner"
-        android:layout_marginLeft="18dp"
-        android:layout_marginTop="137dp"
-        android:text="@string/name_user_info"/>
-
-    <TextView
-        android:id="@+id/ageTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/nameTxt"
-        android:layout_below="@+id/nameTxt"
-        android:layout_marginTop="33dp"
-        android:text="@string/age_user_info"/>
-
-    <TextView
         android:id="@+id/heightTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/ageTxt"
         android:layout_below="@+id/ageTxt"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="20dp"
+        android:textSize="15sp"
         android:text="@string/height_user_info"/>
 
     <TextView
@@ -95,17 +77,9 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/heightTxt"
         android:layout_below="@+id/heightTxt"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="20dp"
+        android:textSize="15sp"
         android:text="@string/weight_user_info"/>
-
-    <TextView
-        android:id="@+id/imcTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/weightTxt"
-        android:layout_below="@+id/weightGraph"
-        android:layout_marginTop="28dp"
-        android:text="@string/imc_user_info"/>
 
     <TextView
         android:id="@+id/nameEdtTxt"
@@ -114,22 +88,6 @@
         android:layout_alignBaseline="@+id/nameTxt"
         android:layout_alignBottom="@+id/nameTxt"
         android:layout_alignStart="@+id/ageEdtTxt"
-        android:padding="5dp"/>
-
-    <TextView
-        android:id="@+id/ageEdtTxt"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/ageTxt"
-        android:layout_centerHorizontal="true"
-        android:padding="5dp"/>
-
-    <TextView
-        android:id="@+id/weightEdtTxt"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/weightTxt"
-        android:layout_centerHorizontal="true"
         android:padding="5dp"/>
 
     <TextView
@@ -148,28 +106,13 @@
         android:layout_alignBottom="@+id/workoutCounterTxt"
         android:layout_marginStart="33dp"
         android:layout_toEndOf="@+id/workoutCounterTxt"
-        android:text="AAA" />
-
-    <TextView
-        android:id="@+id/workoutCounterTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:text="@string/workouts_user_info"
-        android:layout_below="@+id/imcGraph"
-        android:layout_alignStart="@+id/imcTxt" />
+        android:text="" />
 
     <com.jjoe64.graphview.GraphView
         android:layout_width="match_parent"
         android:layout_height="100dip"
         android:id="@+id/weightGraph"
         android:layout_below="@+id/weightTxt"/>
-
-    <com.jjoe64.graphview.GraphView
-        android:layout_width="match_parent"
-        android:layout_height="100dip"
-        android:id="@+id/imcGraph"
-        android:layout_below="@+id/imcTxt"/>
 
     <ImageButton
         android:id="@+id/backBtn"
@@ -186,9 +129,74 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:layout_alignBaseline="@+id/heightTxt"
+        android:textSize="15sp"
         android:layout_alignBottom="@+id/heightTxt"
-        android:layout_toEndOf="@+id/workoutCounterTxt" />
+        android:layout_alignStart="@+id/ageEdtTxt" />
+
+    <TextView
+        android:id="@+id/weightEdtTxt"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:padding="5dp"
+        android:layout_above="@+id/weightGraph"
+        android:layout_alignStart="@+id/heightEdtTxt" />
+
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="100dip"
+        android:id="@+id/imcGraph"
+        android:layout_below="@+id/imcEdtTxt"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/imcTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/imc_user_info"
+        android:layout_below="@+id/weightGraph"
+        android:layout_alignStart="@+id/workoutCounterTxt" />
+
+    <TextView
+        android:id="@+id/workoutCounterTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/workouts_user_info"
+        android:layout_marginBottom="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/imcEdtTxt" />
+
+    <TextView
+        android:id="@+id/ageTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
+        android:textSize="15sp"
+        android:text="@string/age_user_info"
+        android:layout_below="@+id/nameEdtTxt"
+        android:layout_alignStart="@+id/nameTxt" />
+
+    <TextView
+        android:id="@+id/nameTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="18dp"
+        android:layout_marginTop="32dp"
+        android:textSize="15sp"
+        android:text="@string/name_user_info"
+        android:layout_below="@+id/screenTxt"
+        android:layout_alignStart="@+id/imcTxt"
+        android:layout_marginStart="12dp" />
+
+    <TextView
+        android:id="@+id/ageEdtTxt"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:padding="5dp"
+        android:layout_alignBottom="@+id/ageTxt"
+        android:layout_alignStart="@+id/imcEdtTxt" />
 
 
 </RelativeLayout>
